--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,7 +29,7 @@
 				<li><a href="#services">Service</a></li>
 				<li><a href="#contact">Contact</a></li>
 				<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
-						target="_blank"><img src="assets/images/instagram.png" alt=""></a></li>
+						target="_blank"><img src="assets/images/logo_instagram.png" alt="icone instagram"></a></li>
 			</ul>
 		</div>
 	</div>
@@ -46,15 +46,15 @@
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" class="d-block w-100"
+					<img src="./assets/images/slider/business_man_xing_ryoji-iwata.jpg" class="d-block w-100"
 						alt="...">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100"
+					<img src="./assets/images/slider/crowd_happy_nicholas-green.jpg" class="d-block w-100"
 						alt="...">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" class="d-block w-100"
+					<img src="./assets/images/slider/wedding_dance_edward-cisneros.jpg" class="d-block w-100"
 						alt="...">
 				</div>
 			</div>
@@ -72,7 +72,7 @@
 	</div>
 	<div id="about">
 		<div class="picture left">
-			<img src="./assets/images/nina.jpg">
+			<img src="./assets/images/portrait_nina_carducci.jpg" alt="Nina Caducci en salopette bleue">
 		</div>
 		<div id="about-me">
 			<h3 class="about-me__title">A propos de moi</h3>
@@ -92,23 +92,31 @@
 		<div class="container py-3">
 			<div class="gallery" style="display: none">
 				<img data-gallery-tag="Concert" class="gallery-item"
-					src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg" />
+					src="./assets/images/gallery/concerts/concert_lights_aaron-paul.jpg"
+					alt="foule en concert sous les projecteurs">
 				<img data-gallery-tag="Entreprises" class="gallery-item"
-					src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg" />
+					src="./assets/images/gallery/entreprise/business_man_suit_ali-morshedlou.jpg"
+					alt="homme d'affaires en costume">
 				<img data-gallery-tag="Entreprises" class="gallery-item"
-					src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg" />
+					src="./assets/images/gallery/entreprise/meeting_women_smiling_jason-goodman.jpg"
+					alt="femme sourit pendant réunion de travail">
 				<img data-gallery-tag="Mariages" class="gallery-item"
-					src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg" />
+					src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg"
+					alt="doigts qui s'effleurent">
 				<img data-gallery-tag="Portrait" class="gallery-item"
-					src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg" />
+					src="./assets/images/gallery/portraits/thinking_man_ade-tunji.jpg" alt="homme en réflexion">
 				<img data-gallery-tag="Mariages" class="gallery-item"
-					src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg" />
+					src="./assets/images/gallery/mariage/wedding_couple_jakob-owens.jpg"
+					alt="jeunes mariés en costume se tenant par la main">
 				<img data-gallery-tag="Portrait" class="gallery-item"
-					src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg" />
+					src="./assets/images/gallery/portraits/serious_woman_glasses_nino-van-prattenburg.jpg"
+					alt="femme à lunette sérieuse">
 				<img data-gallery-tag="Concert" class="gallery-item"
-					src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg" />
+					src="./assets/images/gallery/concerts/concert_singer_smoke_austin-neill.jpg"
+					alt="chanteur sur scène devant écran de fumée multicolore">
 				<img data-gallery-tag="Entreprises" class="gallery-item"
-					src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg" />
+					src="./assets/images/gallery/entreprise/woman_smiling_laptop_mateus-campos-felipe.jpg"
+					alt="femme souriante devant son ordinateur portable">
 			</div>
 		</div>
 		<div class="quote">
@@ -176,18 +184,18 @@
 			<div class="form-container">
 				<h3>Une question ? Une demande de devis ?</h3>
 				<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
-				<form action="" method="post">
+				<form action="#" method="post">
 					<label>Nom</label>
 					<input type="text" name="nom" id="nom">
 					<label>Email</label>
 					<input type="email" name="email" id="email">
 					<label>Message</label>
 					<textarea name="message" id="message" cols="30" rows="10"></textarea>
-					<input type="submit" value="Envoyer" />
+					<input type="submit" value="Envoyer">
 				</form>
 			</div>
 			<div class="picture right">
-				<img src="./assets/images/camera.jpg">
+				<img src="./assets/images/appareil_photo.jpg" alt="appareil photo">
 			</div>
 		</div>
 	</div>
