--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/maugallery.js"></script>
 	<script src="./assets/scripts.js"></script>
-	<title>Nina Carducci - Photographe - Mariages - Portraits - Entreprise</title>
+	<title>Nina Carducci - Photographe professionelle à Bordeaux - Mariages - Portraits - Entreprise</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Nina Carducci - Photographe professionnelle - Mariage, Portrait, Entreprises, Concert" />
+	<meta name="description" content="Nina Carducci - Photographe professionnelle à Bordeaux - Couvre de nombreux événements: mariages, concerts, festivités, entreprises, portraits" />
 </head>
 
 <body>
