--- a/index.html
+++ b/index.html
@@ -16,9 +16,28 @@
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/maugallery.js"></script>
 	<script src="./assets/scripts.js"></script>
-	<title>Nina Carducci - Photographe professionelle à Bordeaux - Mariages - Portraits - Entreprise</title>
+	<title>Nina Carducci - Photographe professionelle à Bordeaux - Tous clichés</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Nina Carducci - Photographe professionnelle à Bordeaux - Couvre de nombreux événements: mariages, concerts, festivités, entreprises, portraits" />
+	<meta name="description"
+		content="Nina Carducci - Photographe professionnelle à Bordeaux - Couvre de nombreux événements: mariages, concerts, festivités, entreprises, portraits">
+
+	<!-- Opengraph (Facbook) meta properties -->
+	<meta property="og:site_name" content="Nina Carducci - Photographe professionnelle">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://jackvpt.github.io/Nina-Carducci-Dev/">
+	<meta property="og:title" content="Nina Carducci - Photographe professionelle à Bordeaux - Tous clichés">
+	<meta property="og:description"
+		content="Nina Carducci - Photographe professionnelle à Bordeaux - Couvre de nombreux événements: mariages, concerts, festivités, entreprises, portraits">
+	<meta property="og:image"
+		content="https://jackvpt.github.io/Nina-Carducci-Dev/assets/images/portrait_nina_carducci.jpg">
+
+	<!-- Twitter meta properties -->
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:site" content="@compteTwitter"> <!-- A DEFINIR -->
+	<meta name="twitter:title" content="Nina Carducci - Photographe professionelle à Bordeaux - Tous clichés">>
+	<meta name="twitter:description" content="Nina Carducci - Photographe professionnelle à Bordeaux - Couvre de nombreux événements: mariages, concerts, festivités, entreprises, portraits">
+	<meta name="twitter:image" content="https://jackvpt.github.io/Nina-Carducci-Dev/assets/images/portrait_nina_carducci.jpg">
+	<meta name="twitter:url" content="http://monsiteweb.fr/ma-page-qui-dechire">
 </head>
 
 <body>
