--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
 				</div>
 				<div id="about-me">
 					<h2 class="about-me-title">A propos de moi</h2>
-					<h6 class="about-me-introduction">Devenir photographe était pour moi une évidence. Comme si j’y
+					<h3 class="about-me-introduction">Devenir photographe était pour moi une évidence. Comme si j’y
 						étais
 						prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre
-						immortels, voilà ce qui me fait vibrer.</h6>
+						immortels, voilà ce qui me fait vibrer.</h3>
 					<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une
 						envie :
 						le
@@ -252,11 +252,11 @@
 					<h2>Une question ? Une demande de devis ?</h2>
 					<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
 					<form action="#" method="post">
-						<label>Nom</label>
-						<input type="text" name="nom" id="nom">
-						<label>Email</label>
+						<label for="name">Nom</label>
+						<input type="text" name="name" id="name">
+						<label for="email">Email</label>
 						<input type="email" name="email" id="email">
-						<label>Message</label>
+						<label for="message">Message</label>
 						<textarea name="message" id="message" cols="30" rows="10"></textarea>
 						<input type="submit" value="Envoyer">
 					</form>
