--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="fr">
 
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,18 +11,26 @@
 		rel="stylesheet">
 
 	<!-- <script src="./assets/bootstrap/bootstrap.bundle.js"></script> -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+		crossorigin="anonymous"></script>
 
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/maugallery.js"></script>
 	<script src="./assets/scripts.js"></script>
 	<title>Nina Carducci - Photographe professionelle à Bordeaux - Tous clichés</title>
+
+	<!-- ======================= -->
+	<!-- Meta tags -->
+	<!-- ======================= -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
 	<meta name="description"
 		content="Nina Carducci - Photographe professionnelle à Bordeaux - Couvre de nombreux événements: mariages, concerts, festivités, entreprises, portraits">
-
-	<!-- Opengraph (Facbook) meta properties -->
+	<meta name="robots" content="index">
+	<meta name="language" content="fr-FR">
+	<!-- Opengraph (Facebook) meta properties -->
 	<meta property="og:site_name" content="Nina Carducci - Photographe professionnelle">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://jackvpt.github.io/Nina-Carducci-Dev/">
@@ -37,8 +44,10 @@
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:site" content="@compteTwitter"> <!-- A DEFINIR -->
 	<meta name="twitter:title" content="Nina Carducci - Photographe professionelle à Bordeaux - Tous clichés">>
-	<meta name="twitter:description" content="Nina Carducci - Photographe professionnelle à Bordeaux - Couvre de nombreux événements: mariages, concerts, festivités, entreprises, portraits">
-	<meta name="twitter:image" content="https://jackvpt.github.io/Nina-Carducci-Dev/assets/images/portrait_nina_carducci.jpg">
+	<meta name="twitter:description"
+		content="Nina Carducci - Photographe professionnelle à Bordeaux - Couvre de nombreux événements: mariages, concerts, festivités, entreprises, portraits">
+	<meta name="twitter:image"
+		content="https://jackvpt.github.io/Nina-Carducci-Dev/assets/images/portrait_nina_carducci.jpg">
 	<meta name="twitter:url" content="http://monsiteweb.fr/ma-page-qui-dechire">
 </head>
 
@@ -80,16 +89,16 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./assets/images/slider/business_man_xing_ryoji-iwata.jpg" class="d-block w-100"
-							alt="businessman traverse la rue">
+						<img loading="lazy" src="./assets/images/slider/business_man_xing_ryoji-iwata.jpg"
+							class="d-block w-100" alt="businessman traverse la rue">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/crowd_happy_nicholas-green.jpg" class="d-block w-100"
-							alt="foule en liesse">
+						<img loading="lazy" src="./assets/images/slider/crowd_happy_nicholas-green.jpg"
+							class="d-block w-100" alt="foule en liesse">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/wedding_dance_edward-cisneros.jpg" class="d-block w-100"
-							alt="danse des mariés">
+						<img loading="lazy" src="./assets/images/slider/wedding_dance_edward-cisneros.jpg"
+							class="d-block w-100" alt="danse des mariés">
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -114,30 +123,30 @@
 			<h2 class="title">Portfolio</h2>
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
-					<img data-gallery-tag="Concert" class="gallery-item"
+					<img loading="lazy" data-gallery-tag="Concert" class="gallery-item"
 						src="./assets/images/gallery/concerts/concert_lights_aaron-paul.jpg"
 						alt="foule en concert sous les projecteurs">
-					<img data-gallery-tag="Entreprises" class="gallery-item"
+					<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/business_man_suit_ali-morshedlou.jpg"
 						alt="homme d'affaires en costume">
-					<img data-gallery-tag="Entreprises" class="gallery-item"
+					<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/meeting_women_smiling_jason-goodman.jpg"
 						alt="femme sourit pendant réunion de travail">
-					<img data-gallery-tag="Mariages" class="gallery-item"
+					<img loading="lazy" data-gallery-tag="Mariages" class="gallery-item"
 						src="./assets/images/gallery/mariage/wedding_touching_fingers_hannah-busing.jpg"
 						alt="doigts qui s'effleurent">
-					<img data-gallery-tag="Portrait" class="gallery-item"
+					<img loading="lazy" data-gallery-tag="Portrait" class="gallery-item"
 						src="./assets/images/gallery/portraits/thinking_man_ade-tunji.jpg" alt="homme en réflexion">
-					<img data-gallery-tag="Mariages" class="gallery-item"
+					<img loading="lazy" data-gallery-tag="Mariages" class="gallery-item"
 						src="./assets/images/gallery/mariage/wedding_couple_jakob-owens.jpg"
 						alt="jeunes mariés en costume se tenant par la main">
-					<img data-gallery-tag="Portrait" class="gallery-item"
+					<img loading="lazy" data-gallery-tag="Portrait" class="gallery-item"
 						src="./assets/images/gallery/portraits/serious_woman_glasses_nino-van-prattenburg.jpg"
 						alt="femme à lunette sérieuse">
-					<img data-gallery-tag="Concert" class="gallery-item"
+					<img loading="lazy" data-gallery-tag="Concert" class="gallery-item"
 						src="./assets/images/gallery/concerts/concert_singer_smoke_austin-neill.jpg"
 						alt="chanteur sur scène devant écran de fumée multicolore">
-					<img data-gallery-tag="Entreprises" class="gallery-item"
+					<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/woman_smiling_laptop_mateus-campos-felipe.jpg"
 						alt="femme souriante devant son ordinateur portable">
 				</div>
@@ -148,7 +157,8 @@
 			<!-- ======================= -->
 			<section id="about">
 				<div class="picture left">
-					<img src="./assets/images/portrait_nina_carducci.jpg" alt="Nina Caducci en salopette bleue">
+					<img loading="lazy" src="./assets/images/portrait_nina_carducci.jpg"
+						alt="Nina Caducci en salopette bleue">
 				</div>
 				<div id="about-me">
 					<h2 class="about-me-title">A propos de moi</h2>
@@ -264,7 +274,7 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="./assets/images/appareil_photo.jpg" alt="appareil photo">
+					<img loading="lazy" src="./assets/images/appareil_photo.jpg" alt="appareil photo">
 				</div>
 			</div>
 		</section>
