--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	<!-- Twitter meta properties -->
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:site" content="@compteTwitter"> <!-- A DEFINIR -->
-	<meta name="twitter:title" content="Nina Carducci - Photographe professionelle à Bordeaux - Tous clichés">>
+	<meta name="twitter:title" content="Nina Carducci - Photographe professionelle à Bordeaux - Tous clichés">
 	<meta name="twitter:description"
 		content="Nina Carducci - Photographe professionnelle à Bordeaux - Couvre de nombreux événements: mariages, concerts, festivités, entreprises, portraits">
 	<meta name="twitter:image"
