--- a/index.html
+++ b/index.html
@@ -89,16 +89,16 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img loading="lazy" src="./assets/images/slider/business_man_xing_ryoji-iwata.jpg"
-							class="d-block w-100" alt="businessman traverse la rue">
+						<img src="./assets/images/slider/business_man_xing_ryoji-iwata.jpg" class="d-block w-100"
+							alt="businessman traverse la rue">
 					</div>
 					<div class="carousel-item">
-						<img loading="lazy" src="./assets/images/slider/crowd_happy_nicholas-green.jpg"
-							class="d-block w-100" alt="foule en liesse">
+						<img src="./assets/images/slider/crowd_happy_nicholas-green.jpg" class="d-block w-100"
+							alt="foule en liesse">
 					</div>
 					<div class="carousel-item">
-						<img loading="lazy" src="./assets/images/slider/wedding_dance_edward-cisneros.jpg"
-							class="d-block w-100" alt="danse des mariés">
+						<img src="./assets/images/slider/wedding_dance_edward-cisneros.jpg" class="d-block w-100"
+							alt="danse des mariés">
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -123,30 +123,30 @@
 			<h2 class="title">Portfolio</h2>
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
-					<img loading="lazy" data-gallery-tag="Concert" class="gallery-item"
+					<img data-gallery-tag="Concert" class="gallery-item"
 						src="./assets/images/gallery/concerts/concert_lights_aaron-paul.jpg"
 						alt="foule en concert sous les projecteurs">
-					<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item"
+					<img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/business_man_suit_ali-morshedlou.jpg"
 						alt="homme d'affaires en costume">
-					<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item"
+					<img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/meeting_women_smiling_jason-goodman.jpg"
 						alt="femme sourit pendant réunion de travail">
-					<img loading="lazy" data-gallery-tag="Mariages" class="gallery-item"
+					<img data-gallery-tag="Mariages" class="gallery-item"
 						src="./assets/images/gallery/mariage/wedding_touching_fingers_hannah-busing.jpg"
 						alt="doigts qui s'effleurent">
-					<img loading="lazy" data-gallery-tag="Portrait" class="gallery-item"
+					<img data-gallery-tag="Portrait" class="gallery-item"
 						src="./assets/images/gallery/portraits/thinking_man_ade-tunji.jpg" alt="homme en réflexion">
-					<img loading="lazy" data-gallery-tag="Mariages" class="gallery-item"
+					<img data-gallery-tag="Mariages" class="gallery-item"
 						src="./assets/images/gallery/mariage/wedding_couple_jakob-owens.jpg"
 						alt="jeunes mariés en costume se tenant par la main">
-					<img loading="lazy" data-gallery-tag="Portrait" class="gallery-item"
+					<img data-gallery-tag="Portrait" class="gallery-item"
 						src="./assets/images/gallery/portraits/serious_woman_glasses_nino-van-prattenburg.jpg"
 						alt="femme à lunette sérieuse">
-					<img loading="lazy" data-gallery-tag="Concert" class="gallery-item"
+					<img data-gallery-tag="Concert" class="gallery-item"
 						src="./assets/images/gallery/concerts/concert_singer_smoke_austin-neill.jpg"
 						alt="chanteur sur scène devant écran de fumée multicolore">
-					<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item"
+					<img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/woman_smiling_laptop_mateus-campos-felipe.jpg"
 						alt="femme souriante devant son ordinateur portable">
 				</div>
@@ -157,8 +157,7 @@
 			<!-- ======================= -->
 			<section id="about">
 				<div class="picture left">
-					<img loading="lazy" src="./assets/images/portrait_nina_carducci.jpg"
-						alt="Nina Caducci en salopette bleue">
+					<img src="./assets/images/portrait_nina_carducci.jpg" alt="Nina Caducci en salopette bleue">
 				</div>
 				<div id="about-me">
 					<h2 class="about-me-title">A propos de moi</h2>
@@ -274,7 +273,7 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img loading="lazy" src="./assets/images/appareil_photo.jpg" alt="appareil photo">
+					<img src="./assets/images/appareil_photo.jpg" alt="appareil photo">
 				</div>
 			</div>
 		</section>
