--- a/index.html
+++ b/index.html
@@ -9,17 +9,21 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+		integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+		crossorigin="anonymous" referrerpolicy="no-referrer">
 
-	<!-- <script src="./assets/bootstrap/bootstrap.bundle.js"></script> -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-		crossorigin="anonymous" defer></script>
+		crossorigin="anonymous"></script>
 
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js"
-		integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous" defer></script>
+		integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
-	<script src="./assets/maugallery.js" defer></script>
-	<script src="./assets/scripts.js" defer></script>
+	<script src="./assets/maugallery.js"></script>
+	<script src="./assets/scripts.js"></script>
+
+
 	<title>Nina Carducci - Photographe professionelle à Bordeaux - Tous clichés</title>
 
 	<!-- ======================= -->
@@ -279,6 +283,40 @@
 			</div>
 		</section>
 	</main>
+
+	<!-- ======================= -->
+	<!-- FOOTER -->
+	<!-- ======================= -->
+	<footer>
+		<div class="contact-map">
+			<div class="contact-details">
+				<div class="address">
+					<div class="contact-icon"><i class="fa-solid fa-location-dot fa-xl"></i></div>
+					<div>
+						<p class="contact-title">ADRESSE :</p>
+						<p class="contact-text">68 avenue Alsace Lorraine<br>
+							33200 BORDEAUX</p>
+					</div>
+				</div>
+				<div class="phone">
+					<div class="contact-icon"><i class="fa-solid fa-phone fa-xl"></i></i></div>
+					<div>
+						<p class="contact-title">CONTACTEZ MOI :</p>
+						<p class="contact-text">+33 (0)5.56.67.78.89<br>
+							Du lundi au vendredi<br>
+							De 10H à 19H</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="google-map">
+				<iframe title="locationMap"
+					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2828.7719178341404!2d-0.6091114233960001!3d44.8465780744346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd54d803d3494ff1%3A0x775d19897dd6276f!2s68%20Av.%20Alsace%20Lorraine%2C%2033200%20Bordeaux!5e0!3m2!1sfr!2sfr!4v1725396945463!5m2!1sfr!2sfr"
+					 style="border:0;" allowfullscreen="" loading="lazy"
+					referrerpolicy="no-referrer-when-downgrade"></iframe>
+			</div>
+		</div>
+	</footer>
 </body>
 
 </html>
