--- a/index.html
+++ b/index.html
@@ -27,6 +27,34 @@
 	<title>Nina Carducci - Photographe professionelle à Bordeaux - Tous clichés</title>
 
 	<!-- ======================= -->
+	<!-- Schema.org -->
+	<!-- ======================= -->
+	<script type="application/ld+json">
+		{
+		  "@context": "https://schema.org",
+		  "@type": "Photographe professionelle",
+		  "address": {
+			"@type": "PostalAddress",
+			"addressLocality": "Bordeaux",
+			"addressRegion": "",
+			"postalCode": "33200",
+			"streetAddress": "68 avenue Alsace Lorraine"
+		  },
+		  "aggregateRating": {
+			"@type": "AggregateRating",
+			"ratingValue": "4",
+			"reviewCount": "250"
+		  },
+		  "name": "Nina Carducci",
+		  "openingHours": [
+			"Mo-Fr 10:00-19:00"
+		  ],
+		  "telephone": "(33) 05.56.67.78.89",
+		  "url": "https://jackvpt.github.io/Nina-Carducci-Dev"
+		}
+		</script>
+
+	<!-- ======================= -->
 	<!-- Meta tags -->
 	<!-- ======================= -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
