--- a/index.html
+++ b/index.html
@@ -31,26 +31,38 @@
 	<!-- ======================= -->
 	<script type="application/ld+json">
 		{
-		  "@context": "https://schema.org",
-		  "@type": "Photographe professionelle",
-		  "address": {
-			"@type": "PostalAddress",
-			"addressLocality": "Bordeaux",
-			"addressRegion": "",
-			"postalCode": "33200",
-			"streetAddress": "68 avenue Alsace Lorraine"
-		  },
-		  "aggregateRating": {
-			"@type": "AggregateRating",
-			"ratingValue": "4",
-			"reviewCount": "250"
-		  },
-		  "name": "Nina Carducci",
-		  "openingHours": [
-			"Mo-Fr 10:00-19:00"
-		  ],
-		  "telephone": "(33) 05.56.67.78.89",
-		  "url": "https://jackvpt.github.io/Nina-Carducci-Dev"
+			"@context": "http://schema.org",
+			"@type": ["LocalBusiness", "Service"],
+			"name": "Nina Carducci",
+			"description": "Nina Carducci, photographe professionnelle à Bordeaux",
+			"image": "https://jackvpt.github.io/Nina-Carducci-Dev/assets/images/portrait_nina_carducci.jpg",
+			"url": "https://nina-carducci-photographe.netlify.app/",
+			"address": {
+				"@type": "PostalAddress",
+				"streetAddress": "68 avenue Alsace-Lorraine",
+				"addressLocality": "Bordeaux",
+				"postalCode": "33200",
+				"addressCountry": "FR"
+				},
+			"geo": {
+				"@type": "GeoCoordinates",
+				"latitude": "44.8466732",
+				"longitude": "-0.6065805"
+			},
+			"openingHoursSpecification": {
+				"@type": "OpeningHoursSpecification",
+				"dayOfWeek": [
+					"lundi",
+					"mardi",
+					"mercredi",
+					"jeudi",
+					"vendredi"
+				],
+				"opens": "10:00",
+				"closes": "19:00"
+			},
+			"telephone": "(33) 05.56.67.78.89",
+			"priceRange" : "50€ - 400€"
 		}
 		</script>
 
@@ -340,7 +352,7 @@
 			<div class="google-map">
 				<iframe title="locationMap"
 					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2828.7719178341404!2d-0.6091114233960001!3d44.8465780744346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd54d803d3494ff1%3A0x775d19897dd6276f!2s68%20Av.%20Alsace%20Lorraine%2C%2033200%20Bordeaux!5e0!3m2!1sfr!2sfr!4v1725396945463!5m2!1sfr!2sfr"
-					 style="border:0;" allowfullscreen="" loading="lazy"
+					style="border:0;" allowfullscreen="" loading="lazy"
 					referrerpolicy="no-referrer-when-downgrade"></iframe>
 			</div>
 		</div>
