--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 	<script src="./assets/maugallery.min.js"></script>
 	<script src="./assets/scripts.js"></script>
 
-
 	<title>Nina Carducci - Photographe professionelle à Bordeaux - Tous clichés</title>
 
 	<!-- ======================= -->
@@ -73,9 +72,10 @@
 	<meta charset="UTF-8">
 	<meta name="description"
 		content="Nina Carducci - Photographe professionnelle à Bordeaux - Couvre de nombreux événements: mariages, concerts, festivités, entreprises, portraits">
-	<meta name="robots" content="index">
+	<meta name="robots" content="index, follow">
 	<meta name="language" content="fr-FR">
-	<!-- Opengraph (Facebook) meta properties -->
+	
+	<!-- Opengraph (Facebook, LinkedIn) meta properties -->
 	<meta property="og:site_name" content="Nina Carducci - Photographe professionnelle">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://jackvpt.github.io/Nina-Carducci-Dev/">
@@ -86,14 +86,20 @@
 		content="https://jackvpt.github.io/Nina-Carducci-Dev/assets/images/portrait_nina_carducci.jpg">
 
 	<!-- Twitter meta properties -->
-	<meta name="twitter:card" content="summary">
+	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@compteTwitter"> <!-- A DEFINIR -->
 	<meta name="twitter:title" content="Nina Carducci - Photographe professionelle à Bordeaux - Tous clichés">
 	<meta name="twitter:description"
 		content="Nina Carducci - Photographe professionnelle à Bordeaux - Couvre de nombreux événements: mariages, concerts, festivités, entreprises, portraits">
-	<meta name="twitter:image"
-		content="https://jackvpt.github.io/Nina-Carducci-Dev/assets/images/portrait_nina_carducci.jpg">
-	<meta name="twitter:url" content="http://monsiteweb.fr/ma-page-qui-dechire">
+	<meta name="twitter:image:src"
+		content="https://jackvpt.github.io/Nina-Carducci-Dev/assets/images/portrait_nina_carducci.jpg"> <!-- A DEFINIR -->
+	<meta name="twitter:url" content=""> <!-- A DEFINIR -->
+
+	<!-- Google+ meta properties -->
+	<meta itemprop="name" content="Nina Carducci Photographe Professionnelle" />
+	<meta itemprop="description" content="Nina Carducci - Photographe professionnelle à Bordeaux - Couvre de nombreux événements: mariages, concerts, festivités, entreprises, portraits" />
+	<meta itemprop="image"
+		content="https://www.skyminds.net/les-balises-meta-indispensables-pour-les-reseaux-sociaux-facebook-twitter-google-pinterest/" />
 </head>
 
 <body>
@@ -134,32 +140,58 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./assets/images/slider/business_man_xing_ryoji-iwata.jpg" class="d-block w-100"
+						<img src="./assets/images/slider/business_man_xing_ryoji-iwata.webp" class="d-block w-100"
 							alt="businessman traverse la rue">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/crowd_happy_nicholas-green.jpg" class="d-block w-100"
+						<img src="./assets/images/slider/crowd_happy_nicholas-green.webp" class="d-block w-100"
 							alt="foule en liesse">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/wedding_dance_edward-cisneros.jpg" class="d-block w-100"
+						<img src="./assets/images/slider/wedding_dance_edward-cisneros.webp" class="d-block w-100"
 							alt="danse des mariés">
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
 					data-bs-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="false"></span>
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 					<span class="visually-hidden">Previous</span>
 				</button>
 				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
 					data-bs-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="false"></span>
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
 					<span class="visually-hidden">Next</span>
 				</button>
 			</div>
 		</section>
 
-
+		<!-- ======================= -->
+		<!-- ABOUT -->
+		<!-- ======================= -->
+		<section id="about">
+			<div class="picture left">
+				<img src="./assets/images/portrait_nina_carducci.webp" alt="Nina Caducci en salopette bleue">
+			</div>
+			<div id="about-me">
+				<h2 class="about-me-title">A propos de moi</h2>
+				<h3 class="about-me-introduction">Devenir photographe était pour moi une évidence. Comme si j’y
+					étais
+					prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre
+					immortels, voilà ce qui me fait vibrer.</h3>
+				<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une
+					envie :
+					le
+					figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos
+					yeux,
+					ou le partager au plus grand nombre.
+					C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon
+					approche, ma
+					technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur,
+					de
+					la
+					tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
+			</div>
+		</section>
 
 		<!-- ======================= -->
 		<!-- GALLERY -->
@@ -169,61 +201,33 @@
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
 					<img data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/images/gallery/concerts/concert_lights_aaron-paul.jpg"
+						src="./assets/images/gallery/concerts/concert_lights_aaron-paul.webp"
 						alt="foule en concert sous les projecteurs">
 					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/business_man_suit_ali-morshedlou.jpg"
+						src="./assets/images/gallery/entreprise/business_man_suit_ali-morshedlou.webp"
 						alt="homme d'affaires en costume">
 					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/meeting_women_smiling_jason-goodman.jpg"
+						src="./assets/images/gallery/entreprise/meeting_women_smiling_jason-goodman.webp"
 						alt="femme sourit pendant réunion de travail">
 					<img data-gallery-tag="Mariages" class="gallery-item"
-						src="./assets/images/gallery/mariage/wedding_touching_fingers_hannah-busing.jpg"
+						src="./assets/images/gallery/mariage/wedding_touching_fingers_hannah-busing.webp"
 						alt="doigts qui s'effleurent">
 					<img data-gallery-tag="Portrait" class="gallery-item"
-						src="./assets/images/gallery/portraits/thinking_man_ade-tunji.jpg" alt="homme en réflexion">
+						src="./assets/images/gallery/portraits/thinking_man_ade-tunji.webp" alt="homme en réflexion">
 					<img data-gallery-tag="Mariages" class="gallery-item"
-						src="./assets/images/gallery/mariage/wedding_couple_jakob-owens.jpg"
+						src="./assets/images/gallery/mariage/wedding_couple_jakob-owens.webp"
 						alt="jeunes mariés en costume se tenant par la main">
 					<img data-gallery-tag="Portrait" class="gallery-item"
-						src="./assets/images/gallery/portraits/serious_woman_glasses_nino-van-prattenburg.jpg"
+						src="./assets/images/gallery/portraits/serious_woman_glasses_nino-van-prattenburg.webp"
 						alt="femme à lunette sérieuse">
 					<img data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/images/gallery/concerts/concert_singer_smoke_austin-neill.jpg"
+						src="./assets/images/gallery/concerts/concert_singer_smoke_austin-neill.webp"
 						alt="chanteur sur scène devant écran de fumée multicolore">
 					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/woman_smiling_laptop_mateus-campos-felipe.jpg"
+						src="./assets/images/gallery/entreprise/woman_smiling_laptop_mateus-campos-felipe.webp"
 						alt="femme souriante devant son ordinateur portable">
 				</div>
 			</div>
-
-			<!-- ======================= -->
-			<!-- ABOUT -->
-			<!-- ======================= -->
-			<section id="about">
-				<div class="picture left">
-					<img src="./assets/images/portrait_nina_carducci.jpg" alt="Nina Caducci en salopette bleue">
-				</div>
-				<div id="about-me">
-					<h2 class="about-me-title">A propos de moi</h2>
-					<h3 class="about-me-introduction">Devenir photographe était pour moi une évidence. Comme si j’y
-						étais
-						prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre
-						immortels, voilà ce qui me fait vibrer.</h3>
-					<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une
-						envie :
-						le
-						figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos
-						yeux,
-						ou le partager au plus grand nombre.
-						C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon
-						approche, ma
-						technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur,
-						de
-						la
-						tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
-				</div>
-			</section>
 
 			<!-- ======================= -->
 			<!-- QUOTE -->
@@ -318,7 +322,7 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="./assets/images/appareil_photo.jpg" alt="appareil photo">
+					<img src="./assets/images/appareil_photo.webp" alt="appareil photo">
 				</div>
 			</div>
 		</section>
@@ -328,32 +332,23 @@
 	<!-- FOOTER -->
 	<!-- ======================= -->
 	<footer>
-		<div class="contact-map">
-			<div class="contact-details">
-				<div class="address">
-					<div class="contact-icon"><i class="fa-solid fa-location-dot fa-xl"></i></div>
-					<div>
-						<p class="contact-title">ADRESSE :</p>
-						<p class="contact-text">68 avenue Alsace Lorraine<br>
-							33200 BORDEAUX</p>
-					</div>
-				</div>
-				<div class="phone">
-					<div class="contact-icon"><i class="fa-solid fa-phone fa-xl"></i></i></div>
-					<div>
-						<p class="contact-title">CONTACTEZ MOI :</p>
-						<p class="contact-text">+33 (0)5.56.67.78.89<br>
-							Du lundi au vendredi<br>
-							De 10H à 19H</p>
-					</div>
+		<div class="contact-details">
+			<div class="address">
+				<div class="contact-icon"><i class="fa-solid fa-location-dot fa-xl"></i></div>
+				<div>
+					<p class="contact-title">ADRESSE :</p>
+					<p class="contact-text">68 avenue Alsace Lorraine<br>
+						33200 BORDEAUX</p>
 				</div>
 			</div>
-
-			<div class="google-map">
-				<iframe title="locationMap"
-					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2828.7719178341404!2d-0.6091114233960001!3d44.8465780744346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd54d803d3494ff1%3A0x775d19897dd6276f!2s68%20Av.%20Alsace%20Lorraine%2C%2033200%20Bordeaux!5e0!3m2!1sfr!2sfr!4v1725396945463!5m2!1sfr!2sfr"
-					style="border:0;" allowfullscreen="" loading="lazy"
-					referrerpolicy="no-referrer-when-downgrade"></iframe>
+			<div class="phone">
+				<div class="contact-icon"><i class="fa-solid fa-phone fa-xl"></i></i></div>
+				<div>
+					<p class="contact-title">CONTACTEZ MOI :</p>
+					<p class="contact-text">+33 (0)5.56.67.78.89<br>
+						Du lundi au vendredi<br>
+						De 10H à 19H</p>
+				</div>
 			</div>
 		</div>
 	</footer>
