--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 			"name": "Nina Carducci",
 			"description": "Nina Carducci, photographe professionnelle à Bordeaux",
 			"image": "https://jackvpt.github.io/Nina-Carducci-Dev/assets/images/portrait_nina_carducci.jpg",
+			"jobTitle": Photographe professionnelle",
 			"url": "https://nina-carducci-photographe.netlify.app/",
 			"address": {
 				"@type": "PostalAddress",
@@ -62,7 +63,8 @@
 				"closes": "19:00"
 			},
 			"telephone": "(33) 05.56.67.78.89",
-			"priceRange" : "50€ - 400€"
+			"priceRange" : "50€ - 400€",
+			"knowsAbout": ["Photographie de mariage", "Photographie de portrait", "Photographie de paysage", "Photographie de concert", "Photographie d'entreprise'"]
 		}
 		</script>
 
