--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 	<script type="application/ld+json">
 		{
 			"@context": "http://schema.org",
-			"@type": ["LocalBusiness", "Service"],
+			"@type": ["LocalBusiness", "ProfessionalService"],
 			"name": "Nina Carducci",
 			"description": "Nina Carducci, photographe professionnelle à Bordeaux",
 			"image": "https://jackvpt.github.io/Nina-Carducci-Dev/assets/images/portrait_nina_carducci.jpg",
 			"jobTitle": Photographe professionnelle",
-			"url": "https://nina-carducci-photographe.netlify.app/",
+			"url": "https://nina-carducci-photographe.fr/",
 			"address": {
 				"@type": "PostalAddress",
 				"streetAddress": "68 avenue Alsace-Lorraine",
@@ -50,6 +50,7 @@
 				"latitude": "44.8466732",
 				"longitude": "-0.6065805"
 			},
+			"hasMap": "https://maps.app.goo.gl/nzVeXPcHvsqzqx3C6",
 			"openingHoursSpecification": {
 				"@type": "OpeningHoursSpecification",
 				"dayOfWeek": [
@@ -90,7 +91,7 @@
 
 	<!-- Twitter meta properties -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:site" content="@compteTwitter"> <!-- A DEFINIR -->
+	<meta name="twitter:site" content="@nina-carducci-photographe"> <!-- A DEFINIR -->
 	<meta name="twitter:title" content="Nina Carducci - Photographe professionnelle à Bordeaux - Tous clichés">
 	<meta name="twitter:description"
 		content="Nina Carducci - Photographe professionnelle à Bordeaux - Couvre de nombreux événements: mariages, concerts, festivités, entreprises, portraits">
@@ -100,11 +101,11 @@
 	<meta name="twitter:url" content=""> <!-- A DEFINIR -->
 
 	<!-- Google+ meta properties -->
-	<meta itemprop="name" content="Nina Carducci Photographe Professionnelle" />
+	<meta itemprop="name" content="Nina Carducci - Photographe professionnelle à Bordeaux - Tous clichés">
 	<meta itemprop="description"
-		content="Nina Carducci - Photographe professionnelle à Bordeaux - Couvre de nombreux événements: mariages, concerts, festivités, entreprises, portraits" />
+		content="Nina Carducci - Photographe professionnelle à Bordeaux - Couvre de nombreux événements: mariages, concerts, festivités, entreprises, portraits">
 	<meta itemprop="image"
-		content="https://www.skyminds.net/les-balises-meta-indispensables-pour-les-reseaux-sociaux-facebook-twitter-google-pinterest/" />
+		content="https://jackvpt.github.io/Nina-Carducci-Dev/assets/images/portrait_nina_carducci.jpg">
 </head>
 
 <body>
