--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" itemscope itemtype="http://schema.org/WebPage">
 
 <head>
+	<meta charset="UTF-8">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -73,7 +74,6 @@
 	<!-- Meta tags -->
 	<!-- ======================= -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta charset="UTF-8">
 	<meta name="description"
 		content="Nina Carducci - Photographe professionnelle à Bordeaux - Couvre de nombreux événements: mariages, concerts, festivités, entreprises, portraits">
 	<meta name="robots" content="index, follow">
@@ -98,7 +98,7 @@
 	<meta name="twitter:image:src"
 		content="https://jackvpt.github.io/Nina-Carducci-Dev/assets/images/portrait_nina_carducci.jpg">
 	<!-- A DEFINIR -->
-	<meta name="twitter:url" content=""> <!-- A DEFINIR -->
+	<meta name="twitter:url" content="@nina-carducci-photographe"> <!-- A DEFINIR -->
 
 	<!-- Google+ meta properties -->
 	<meta itemprop="name" content="Nina Carducci - Photographe professionnelle à Bordeaux - Tous clichés">
@@ -106,6 +106,11 @@
 		content="Nina Carducci - Photographe professionnelle à Bordeaux - Couvre de nombreux événements: mariages, concerts, festivités, entreprises, portraits">
 	<meta itemprop="image"
 		content="https://jackvpt.github.io/Nina-Carducci-Dev/assets/images/portrait_nina_carducci.jpg">
+	<meta itemprop="serviceType" content="Photographie de concert">
+	<meta itemprop="serviceType" content="Photographie de mariage">
+	<meta itemprop="serviceType" content="Photographie d'entreprise">
+	<meta itemprop="serviceType" content="Photographie de portrait">
+	<meta itemprop="areaServed" content="Bordeaux, France">
 </head>
 
 <body>
@@ -355,7 +360,7 @@
 				</div>
 			</div>
 			<div class="phone">
-				<div class="contact-icon"><i class="fa-solid fa-phone fa-xl"></i></i></div>
+				<div class="contact-icon"><i class="fa-solid fa-phone fa-xl"></i></div>
 				<div>
 					<p class="contact-title">CONTACTEZ MOI :</p>
 					<p class="contact-text">+33 (0)5.56.67.78.89<br>
