--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-		crossorigin="anonymous"></script>
+		crossorigin="anonymous" defer></script>
 
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js"
-		integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+		integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous" defer></script>
 
-	<script src="./assets/maugallery.min.js"></script>
-	<script src="./assets/scripts.js"></script>
+	<script src="./assets/maugallery.min.js" defer></script>
+	<script src="./assets/scripts.js" defer></script>
 
 	<title>Nina Carducci - Photographe professionnelle à Bordeaux - Tous clichés</title>
 
@@ -158,15 +158,15 @@
 				<div class="carousel-inner">
 					<div class="carousel-item active">
 						<img src="./assets/images/slider/business_man_xing_ryoji-iwata.webp" class="d-block w-100"
-							alt="businessman traverse la rue">
+							alt="businessman traverse la rue" width="100%">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/crowd_happy_nicholas-green.webp" class="d-block w-100"
-							alt="foule en liesse">
+							alt="foule en liesse" width="100%">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/wedding_dance_edward-cisneros.webp" class="d-block w-100"
-							alt="danse des mariés">
+							alt="danse des mariés" width="100%">
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
