--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 	<header>
 		<div class="header-title">
 			<div class="header-name">
-				<img src="assets/images/icon_camera.png" alt="icone appareil photo">
+				<img src="assets/images/icon_camera.png" alt="icone appareil photo" width="40px" height="40px">
 				<h1>Nina Carducci</h1>
 			</div>
 			<h2>Photographe professionnelle</h2>
