--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="./assets/images/appareil_photo.webp" alt="appareil photo" loading="lazy">
+					<img src="assets/images/appareil_photo.webp" alt="appareil photo" loading="lazy" width="320px" height="320px">
 				</div>
 			</div>
 		</section>
