--- a/index.html
+++ b/index.html
@@ -157,16 +157,20 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./assets/images/slider/business_man_xing_ryoji-iwata.webp" class="d-block w-100"
-							alt="businessman traverse la rue" width="100%">
+						<img src="./assets/images/slider/business_man_xing_ryoji-iwata.webp"
+						srcset="./assets/images/slider/business_man_xing_ryoji-iwata-1400.webp 1400w,
+						./assets/images/slider/business_man_xing_ryoji-iwata.webp-700 700w"
+						sizes="100vw"
+						class="d-block w-100"
+							alt="businessman traverse la rue">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/crowd_happy_nicholas-green.webp" class="d-block w-100"
-							alt="foule en liesse" width="100%">
+							alt="foule en liesse">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/wedding_dance_edward-cisneros.webp" class="d-block w-100"
-							alt="danse des mariés" width="100%">
+							alt="danse des mariés">
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
