--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./assets/images/slider/business_man_xing_ryoji-iwata.webp"
+						<img src="./assets/images/slider/business_man_xing_ryoji-iwata-1400.webp"
 						srcset="./assets/images/slider/business_man_xing_ryoji-iwata-1400.webp 1400w,
 						./assets/images/slider/business_man_xing_ryoji-iwata.webp-700 700w"
 						sizes="100vw"
@@ -165,11 +165,19 @@
 							alt="businessman traverse la rue">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/crowd_happy_nicholas-green.webp" class="d-block w-100"
+						<img src="./assets/images/slider/crowd_happy_nicholas-green-1400.webp"
+						srcset="./assets/images/slider/crowd_happy_nicholas-green-1400.webp 1400w,
+						./assets/images/slider/crowd_happy_nicholas-green-700 700w"
+						sizes="100vw"
+						class="d-block w-100"
 							alt="foule en liesse">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/wedding_dance_edward-cisneros.webp" class="d-block w-100"
+						<img src="./assets/images/slider/wedding_dance_edward-cisneros-1400.webp"
+						srcset="./assets/images/slider/wedding_dance_edward-cisneros-1400.webp 1400w,
+						./assets/images/slider/wedding_dance_edward-cisneros-700 700w"
+						sizes="100vw"
+						class="d-block w-100"
 							alt="danse des mariés">
 					</div>
 				</div>
