--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		rel="stylesheet">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
 		integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
 		crossorigin="anonymous" referrerpolicy="no-referrer">
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-		crossorigin="anonymous" defer></script>
+		crossorigin="anonymous"></script>
 
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js"
 		integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous" defer></script>
 
-	<script src="./assets/maugallery.min.js" defer></script>
+	<script src="./assets/maugallery.js" defer></script>
 	<script src="./assets/scripts.js" defer></script>
 
 	<title>Nina Carducci - Photographe professionnelle à Bordeaux - Tous clichés</title>
@@ -157,27 +157,18 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./assets/images/slider/business_man_xing_ryoji-iwata-1400.webp"
-						srcset="./assets/images/slider/business_man_xing_ryoji-iwata-1400.webp 1400w,
-						./assets/images/slider/business_man_xing_ryoji-iwata.webp-700 700w"
-						sizes="100vw"
-						class="d-block w-100"
+						<img src="./assets/images/slider/business_man_xing_ryoji-iwata-1400.webp" srcset="./assets/images/slider/business_man_xing_ryoji-iwata-1400.webp 1400w,
+						./assets/images/slider/business_man_xing_ryoji-iwata.webp-700 700w" sizes="100vw" class="d-block w-100"
 							alt="businessman traverse la rue">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/crowd_happy_nicholas-green-1400.webp"
-						srcset="./assets/images/slider/crowd_happy_nicholas-green-1400.webp 1400w,
-						./assets/images/slider/crowd_happy_nicholas-green-700 700w"
-						sizes="100vw"
-						class="d-block w-100"
+						<img src="./assets/images/slider/crowd_happy_nicholas-green-1400.webp" srcset="./assets/images/slider/crowd_happy_nicholas-green-1400.webp 1400w,
+						./assets/images/slider/crowd_happy_nicholas-green-700 700w" sizes="100vw" class="d-block w-100"
 							alt="foule en liesse">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/wedding_dance_edward-cisneros-1400.webp"
-						srcset="./assets/images/slider/wedding_dance_edward-cisneros-1400.webp 1400w,
-						./assets/images/slider/wedding_dance_edward-cisneros-700 700w"
-						sizes="100vw"
-						class="d-block w-100"
+						<img src="./assets/images/slider/wedding_dance_edward-cisneros-1400.webp" srcset="./assets/images/slider/wedding_dance_edward-cisneros-1400.webp 1400w,
+						./assets/images/slider/wedding_dance_edward-cisneros-700 700w" sizes="100vw" class="d-block w-100"
 							alt="danse des mariés">
 					</div>
 				</div>
@@ -352,7 +343,8 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="assets/images/appareil_photo.webp" alt="appareil photo" loading="lazy" width="320px" height="320px">
+					<img src="assets/images/appareil_photo.webp" alt="appareil photo" loading="lazy" width="320px"
+						height="320px">
 				</div>
 			</div>
 		</section>
