--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
-	<link rel="stylesheet" href="./assets/style.min.css">
+	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="icon" type="image/x-icon" href="/assets/images/icon_camera.png">
@@ -200,21 +200,17 @@
 			<div id="about-me">
 				<h2 class="about-me-title">A propos de moi</h2>
 				<h3 class="about-me-introduction">Devenir photographe était pour moi une évidence. Comme si j’y
-					étais
-					prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre
+					étais prédestinée. Saisir un moment, une émotion, une situation, un endroit, une lumière et les
+					rendre
 					immortels, voilà ce qui me fait vibrer.</h3>
 				<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une
-					envie :
-					le
-					figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos
-					yeux,
-					ou le partager au plus grand nombre.
-					C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon
-					approche, ma
-					technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur,
-					de
-					la
-					tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
+					envie : le figer au travers de photographies pour le savourer avec les personnes qui sont
+					importantes à nos
+					yeux, ou le partager au plus grand nombre.</p>
+				<p>C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon
+					approche, ma technique.</p>
+				<p>Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur,
+					de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
 			</div>
 		</section>
 
