--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link rel="icon" type="image/x-icon" href="/assets/images/icon_camera.png">
 
+	<!-- Preload -->
+	<link rel="preload" as="icon" href=".//assets/images/icon_camera.webp">
 	<link rel="preload" as="image" href="./assets/images/slider/business_man_xing_ryoji-iwata-1400.webp">
 	<link rel="preload" as="image" href="./assets/images/slider/crowd_happy_nicholas-green-1400.webp">
 	<link rel="preload" as="image" href="./assets/images/slider/wedding_dance_edward-cisneros-1400.webp">
+	<link rel="preload" as="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
+
+	<link rel="icon" type="image/x-icon" href="/assets/images/icon_camera.webp">
 
 	<link
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
@@ -19,10 +23,6 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
 		integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
 		crossorigin="anonymous" referrerpolicy="no-referrer">
-
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-		crossorigin="anonymous"></script>
 
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js"
 		integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous" defer></script>
@@ -125,7 +125,7 @@
 	<header>
 		<div class="header-title">
 			<div class="header-name">
-				<img src="assets/images/icon_camera.png" alt="icone appareil photo" width="40px" height="40px">
+				<img src="assets/images/icon_camera.webp" alt="icone appareil photo" width="40px" height="40px">
 				<h1>Nina Carducci</h1>
 			</div>
 			<h2>Photographe professionnelle</h2>
@@ -137,7 +137,7 @@
 				<li><a href="#services">Service</a></li>
 				<li><a href="#contact">Contact</a></li>
 				<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
-						target="_blank"><img src="assets/images/logo_instagram.png" alt="icone instagram"></a></li>
+						target="_blank"><img src="assets/images/logo_instagram.webp" alt="icone instagram"></a></li>
 			</ul>
 		</nav>
 	</header>
@@ -168,8 +168,8 @@
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/crowd_happy_nicholas-green-1400.webp" srcset="./assets/images/slider/crowd_happy_nicholas-green-1400.webp 1400w,
-						./assets/images/slider/crowd_happy_nicholas-green-700 700w" sizes="100vw" class="d-block w-100"
-							alt="foule en liesse">
+						./assets/images/slider/crowd_happy_nicholas-green-700.webp 700w" sizes="100vw" class="d-block w-100"
+							alt="danse des mariés">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/wedding_dance_edward-cisneros-1400.webp" srcset="./assets/images/slider/wedding_dance_edward-cisneros-1400.webp 1400w,
