--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
 	<!-- Preload -->
-	<link rel="preload" as="icon" href=".//assets/images/icon_camera.webp">
+	<link rel="preload" as="image" href="./assets/images/icon_camera.webp">
 	<link rel="preload" as="image" href="./assets/images/slider/business_man_xing_ryoji-iwata-1400.webp">
 	<link rel="preload" as="image" href="./assets/images/slider/crowd_happy_nicholas-green-1400.webp">
 	<link rel="preload" as="image" href="./assets/images/slider/wedding_dance_edward-cisneros-1400.webp">
-	<link rel="preload" as="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
 
 	<link rel="icon" type="image/x-icon" href="/assets/images/icon_camera.webp">
 
@@ -27,6 +26,7 @@
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js"
 		integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous" defer></script>
 
+	<script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
 	<script src="./assets/maugallery.min.js" defer></script>
 	<script src="./assets/scripts.min.js" defer></script>
 
@@ -125,7 +125,7 @@
 	<header>
 		<div class="header-title">
 			<div class="header-name">
-				<img src="assets/images/icon_camera.webp" alt="icone appareil photo" width="40px" height="40px">
+				<img src="assets/images/icon_camera.webp" alt="icone appareil photo">
 				<h1>Nina Carducci</h1>
 			</div>
 			<h2>Photographe professionnelle</h2>
@@ -150,7 +150,7 @@
 		<!-- ======================= -->
 		<!-- CARROUSSEL -->
 		<!-- ======================= -->
-		<section>
+		<div>
 			<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 				<div class="carousel-indicators">
 					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
@@ -188,7 +188,7 @@
 					<span class="visually-hidden">Next</span>
 				</button>
 			</div>
-		</section>
+		</div>
 
 		<!-- ======================= -->
 		<!-- ABOUT -->
@@ -315,7 +315,7 @@
 		<!-- ======================= -->
 		<!-- QUOTE -->
 		<!-- ======================= -->
-		<section class="quote">
+		<div class="quote">
 			<figure>
 				<blockquote>
 					<p class="quote-text">De manière inconsciente, je crois, je guette un regard, une expression, des
@@ -323,7 +323,7 @@
 				</blockquote>
 				<figcaption class="quote-author">- Richard Avedon</figcaption>
 			</figure>
-		</section>
+		</div>
 
 		<!-- ======================= -->
 		<!-- CONTACT -->
@@ -344,8 +344,7 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="assets/images/appareil_photo.webp" alt="appareil photo" loading="lazy" width="320px"
-						height="320px">
+					<img src="assets/images/appareil_photo.webp" alt="appareil photo" loading="lazy">
 				</div>
 			</div>
 		</section>
