--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<script type="application/ld+json">
 		{
 			"@context": "http://schema.org",
-			"@type": ["LocalBusiness", "ProfessionalService"],
+			"@type": ["LocalBusiness", "PhotographAction"],
 			"name": "Nina Carducci",
 			"description": "Nina Carducci, photographe professionnelle à Bordeaux",
 			"image": "https://jackvpt.github.io/Nina-Carducci-Dev/assets/images/portrait_nina_carducci.jpg",
