--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
 		integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-		crossorigin="anonymous" referrerpolicy="no-referrer" defer>
+		crossorigin="anonymous" referrerpolicy="no-referrer">
 
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js"
 		integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous" defer></script>
@@ -38,11 +38,11 @@
 	<script type="application/ld+json">
 		{
 			"@context": "http://schema.org",
-			"@type": ["LocalBusiness", "PhotographAction"],
+			"@type": ["LocalBusiness", "ProfessionalService", "PhotographAction"],
 			"name": "Nina Carducci",
 			"description": "Nina Carducci, photographe professionnelle à Bordeaux",
 			"image": "https://jackvpt.github.io/Nina-Carducci-Dev/assets/images/portrait_nina_carducci.jpg",
-			"jobTitle": Photographe professionnelle",
+			"jobTitle": "Photographe professionnelle",
 			"url": "https://nina-carducci-photographe.fr/",
 			"address": {
 				"@type": "PostalAddress",
